Fix profile activation to accept JDK range, remove enable preview flags